         widget/{menu.c,roms.c,widget_internals.h},win32/roms.c}: number
         machine and peripheral ROMs separately (Stuart).
20150502 peripherals/usource.c: add missing inclusion of unittests/unittests.h
         (Stuart).
20150504 memory.[ch],unittests/unittests.[ch]: switch to 2KB page size (Stuart).
20150504 peripherals/disk/opus.c: remove workaround for 4KB page size (Stuart).
20150505 man/fuse.1: split machine and peripheral ROM command line options into
         separate lists (Stuart).
20150505 man/fuse.1: sort peripheral ROM options to match UI (Stuart).
20150505 menu_data.pl,peripherals/{fuller.h,melodik.h}, ui/widget/mkfusefont.pl,
         ui/win32/{installer,installer/fuse.nsi.in}: add missing properties and
         adjust existing ones (Sergio).
20150506 peripherals/disk/wd_fdc.c: refactor use of f->current_drive (thanks,
	 Gergely) (Stuart).
20150506 peripherals/disk/{opus.c,wd_fdc.[ch]}: rename WD_FLAG_OPUS to
	 WD_FLAG_DRQ (part of patch #330) (Gergely Szasz).
20150506 peripherals/disk/wd_fdc.h: tidy up comments (Stuart).
20150506 peripherals/disk/{fdd.[ch],wd_fdc.[ch]}: implement WD2797 emulation
         (more of patch #330) (Gergely Szasz).
20150506 peripherals/disk/wd_fdc.h: use enums for status register bits and
         configuration flags (Stuart).
20150507 memory.[ch],peripherals/{disk/beta.c,if2.c,spectranet.c}: rename
         memory_map_romcs() to memory_map_romcs_full() (Stuart).
20150507 peripherals/disk/wd_fdc.c: fix WD2797 side selection (more of patch
         #330) (Gergely Szasz).
20150508 peripherals/disk/wd_fdc.c: really fix WD2797 side selection (even more
         of patch #330) (Gergely Szasz).
20150508 peripherals/disk/wd_fdc.c: implement WD2797 side comparison (rest of
         patch #330) (Gergely Szasz).
20150508 peripherals/disk/wd_fdc.c: remove trailing whitespace (Stuart).
20150509 machine.c: only try to load the fallback ROM if it is different to the
         standard one (Fred).